@@ -707,17 +707,41 @@ public class RdapControllerTestIntegration extends AbstractRdapIntegrationTest {
     }
 
     @Test
-    public void lookup_inetnum_not_found() {
-        final NotFoundException notFoundException = assertThrows(NotFoundException.class, () -> {
-            createResource("ip/193.0.0.0")
+    public void lookup_inetnum_return_administrative_range() {
+        final Ip ip = createResource("ip/193.0.0.0")
                     .request(MediaType.APPLICATION_JSON_TYPE)
                     .get(Ip.class);
-        });
-        final RdapObject error = notFoundException.getResponse().readEntity(RdapObject.class);
-        assertThat(error.getErrorCode(), is(HttpStatus.NOT_FOUND_404));
-        assertThat(error.getErrorTitle(), is("404 Not Found"));
-        assertThat(error.getDescription().get(0), is("Requested object not found"));
+
+        assertThat(ip.getHandle(), is("193.0.0.0/8"));
+        assertThat(ip.getStartAddress(), is("193.0.0.0"));
+        assertThat(ip.getEndAddress(), is("193.255.255.255"));
+        assertThat(ip.getName(), is("RIPE-NCC-MANAGED-ADDRESS-BLOCK"));
+        assertThat(ip.getType(), is("ALLOCATED UNSPECIFIED"));
+        assertThat(ip.getCountry(), is(nullValue()));
+        assertThat(ip.getParentHandle(), is("0.0.0.0 - 255.255.255.255"));
+        assertThat(ip.getStatus().getFirst(), is("administrative"));
     }
+
+    @Test
+    public void lookup_inetnum_administrative_range_exact() {
+
+        ipTreeUpdater.rebuild();
+
+        final Ip ip = createResource("ip/002/8")
+                .request(MediaType.APPLICATION_JSON_TYPE)
+                .get(Ip.class);
+
+        assertThat(ip.getHandle(), is("2.0.0.0/8"));
+        assertThat(ip.getStartAddress(), is("2.0.0.0"));
+        assertThat(ip.getEndAddress(), is("2.255.255.255"));
+        assertThat(ip.getName(), is("RIPE-NCC-MANAGED-ADDRESS-BLOCK"));
+        assertThat(ip.getType(), is("ALLOCATED UNSPECIFIED"));
+        assertThat(ip.getCountry(), is(nullValue()));
+        assertThat(ip.getParentHandle(), is("0.0.0.0 - 255.255.255.255"));
+        assertThat(ip.getStatus().getFirst(), is("administrative"));
+
+    }
+
 
     @Test
     public void lookup_inetnum() {
